FSD-P4: Fixed danger alert alignment in tester and testee login page

--- a/Phase-4/onlineTest/app/src/app/components/tester/tester-login/tester-login.component.scss
+++ b/Phase-4/onlineTest/app/src/app/components/tester/tester-login/tester-login.component.scss
@@ -9,7 +9,7 @@ form {
   border: 1px solid red;
 }
 
-.alert {
+.alert-top {
   margin: auto;
   min-width: 350px;
   max-width: 400px;
